--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
+    "sharp": "^0.33.5",
+    "slugify": "^1.6.6",
+    "uuid": "^10.0.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
